--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,13 @@
   right: 0;
   top: 0;
   padding: 10px;
+  display: flex;
+}
+.envelope__icon {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding: 10px;
 }
 
 .mode__buttom {
@@ -127,4 +134,13 @@
   .portfolio {
     padding: 120px !important;
   }
+}
+
+Button.resume {
+  font-weight: 500;
+}
+button.chakra-button.poppins.css-7vm6ds,
+button.chakra-button.css-u3wv0a {
+  font-weight: 500;
+  filter: drop-shadow(3px 3px 3px rgb(0, 0, 0));
 }
