--- a/src/App.css
+++ b/src/App.css
@@ -167,7 +167,7 @@ input[type="text"],
 input[type="email"],
 textarea {
   width: 100%;
-  padding: 8px 20px;
+  padding: 10px 130px;
   margin: 8px 0;
   box-sizing: border-box;
   border: 1px solid rgb(165, 165, 165);
@@ -185,4 +185,15 @@ textarea {
   .skills__container {
     flex-direction: column;
   }
+  .skills__title,
+  .contact__title {
+    font-size: 22px;
+    text-align: center;
+  }
+}
+
+.email__container,
+.name__container,
+.message__container {
+  margin: 8px !important;
 }
